[package]
edition = "2021"
name = "sd-prompt-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.65", features = ["backtrace"]}
async-once-cell = "0.4.2"
aws-config = "0.48.0"
aws-sdk-dynamodb = "0.18.0"
dotenv = "0.15.0"
envy = "0.4.2"
fancy-regex = "0.10.0"
json = "0.12.4"
lambda_http = {version = "0.6.0", default-features = false, features = ["apigw_http", "apigw_rest"]}
lambda_runtime = "0.6.0"
log = "0.4.17"
once_cell = "1.14.0"
regex = "1.6.0"
serde = "1.0.144"
serde_json = "1.0.85"
simplelog = "0.12.0"
tokio = {version = "1", features = ["macros"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt"]}
